classDiagram
    %% Enum 定義は docs/common/01_Enum.mmd を参照
    namespace ChatDomain {
        %% ルームチャット機能
        class ChatRoom {
            <<Aggregate Root>>
            +PlayerId OwnerId
            +int LastChatId
            -List~ChatMessage~ _messages
            +IReadOnlyList~ChatMessage~ Messages
            +ChatRoom(ownerId: PlayerId, lastChatId: int, messages: IEnumerable~ChatMessage~)
            +GetNextMessageId() : int
            +PostMessage(senderId : PlayerId, text : string) : void
            +PostSystemMessage(text : string) : void
            +RestoreMessages(messages: IEnumerable~ChatMessage~) : void
            +EnforceMessageLimit() : void
        }

        class ChatMessage {
            <<Entity>>
            +ChatMessageSenderType SenderType
            +PlayerId? SenderId
            +int ChatId
            +ChatText Body
            +DateTimeOffset CreatedAt
            +bool IsAlerted
        }

        class ChatText {
            <<Value Object>>
            +string Text
            -ValidateMessage() : string
        }

        class IChatRoomRepository {
            +Task~ChatRoom~ GetChatRoomAsync(ownerId: PlayerId)
            +Task SaveAsync(room: ChatRoom)
        }

        class ChatRoomView {
            <<Read Model>>
            +PlayerId OwnerId
            +int LastChatId
            +IReadOnlyList~ChatMessageView~ Messages
        }

        class ChatMessageView {
            <<Read Model>>
            +int ChatId
            +string SenderType
            +PlayerId? SenderId
            +string SenderName
            +string? ImagePath
            +string Message
            +DateTimeOffset CreatedAt
            +bool IsAlerted
        }

        class ChatService {
            <<Application Service>>
            +Task EnsureRoomAsync(ownerId: PlayerId)
            +Task~ChatRoomView~ GetRoomAsync(ownerId: PlayerId)
            +Task~ChatRoomView~ PostMessageAsync(ownerId: PlayerId, senderId: PlayerId, text: string)
            +Task PostSystemMessageAsync(ownerId: PlayerId, text: string)
            +Task MarkMessagesAlertedAsync(ownerId: PlayerId, chatIds: IEnumerable~int~)
        }

        note for ChatService "匿名ログイン中のユーザーは ChatRoom への投稿不可。\n閲覧のみ許可し、投稿要求はエンドポイントで拒否する。"

        %% 全体チャット機能
        class GlobalChatRoom {
            <<Aggregate Root>>
            +int LastChatId
            -List~ChatMessage~ _messages
            +IReadOnlyList~ChatMessage~ Messages
            +GlobalChatRoom(lastChatId: int, messages: IEnumerable~ChatMessage~)
            +GetNextMessageId() : int
            +PostMessage(senderId : PlayerId, text : string) : void
            +PostSystemMessage(text : string) : void
            +RestoreMessages(messages: IEnumerable~ChatMessage~) : void
            +EnforceMessageLimit() : void
        }

        class IGlobalChatRoomRepository {
            +Task~GlobalChatRoom~ GetAsync()
            +Task SaveAsync(room: GlobalChatRoom)
        }

        class GlobalChatRoomView {
            <<Read Model>>
            +int LastChatId
            +IReadOnlyList~GlobalChatMessageView~ Messages
        }

        class GlobalChatMessageView {
            <<Read Model>>
            +int ChatId
            +string SenderType
            +PlayerId? SenderId
            +string SenderName
            +string? ImagePath
            +string Message
            +DateTimeOffset CreatedAt
        }

        class GlobalChatService {
            <<Application Service>>
            +Task~GlobalChatRoomView~ GetAsync()
            +Task~GlobalChatRoomView~ PostMessageAsync(senderId: PlayerId, text: string)
        }

        note for GlobalChatService "匿名ログイン中のユーザーは投稿不可。\n通知（is_alerted）機能はなし。"

        %% スレッド機能
        class Thread {
            <<Aggregate Root>>
            +ThreadId Id
            +PlayerId AuthorPlayerId
            +ThreadTitle Title
            +ThreadBody Body
            +DateTimeOffset CreatedAt
            +DateTimeOffset UpdatedAt
            +DateTimeOffset? LastRepliedAt
            -List~ThreadReply~ _replies
            +IReadOnlyList~ThreadReply~ Replies
            +Thread(id: ThreadId, authorPlayerId: PlayerId, title: ThreadTitle, body: ThreadBody, createdAt: DateTimeOffset, updatedAt: DateTimeOffset, lastRepliedAt: DateTimeOffset?, replies: IEnumerable~ThreadReply~)
            +AddReply(replyId: ThreadReplyId, authorPlayerId: PlayerId, body: ThreadReplyBody) : void
        }

        class ThreadReply {
            <<Entity>>
            +ThreadReplyId Id
            +PlayerId AuthorPlayerId
            +ThreadReplyBody Body
            +DateTimeOffset CreatedAt
            +bool IsAuthorAlerted
        }

        class ThreadId {
            <<Value Object>>
            +Guid Value
        }

        class ThreadReplyId {
            <<Value Object>>
            +Guid Value
        }

        class ThreadTitle {
            <<Value Object>>
            +string Value
            -ValidateTitle() : string
        }

        class ThreadBody {
            <<Value Object>>
            +string Value
            -ValidateBody() : string
        }

        class ThreadReplyBody {
            <<Value Object>>
            +string Value
            -ValidateBody() : string
        }

        class ThreadSummary {
            <<Read Model>>
            +ThreadId Id
            +string Title
            +string PreviewBody
            +DateTimeOffset CreatedAt
            +DateTimeOffset? LastRepliedAt
            +int ReplyCount
            +string AuthorName
            +string? AuthorImagePath
        }

        class ThreadDetailView {
            <<Read Model>>
            +ThreadId Id
            +string Title
            +string Body
            +DateTimeOffset CreatedAt
            +DateTimeOffset UpdatedAt
            +DateTimeOffset? LastRepliedAt
            +string AuthorName
            +string? AuthorImagePath
            +IReadOnlyList~ThreadReplyView~ Replies
        }

        class ThreadReplyView {
            <<Read Model>>
            +ThreadReplyId Id
            +string Body
            +DateTimeOffset CreatedAt
            +string AuthorName
            +string? AuthorImagePath
            +bool IsAuthorAlerted
        }

        class ThreadAlertSummaryView {
            <<Read Model>>
            +ThreadId ThreadId
            +string ThreadTitle
            +IReadOnlyList~ThreadReplyId~ ReplyIds
            +int UnalertedReplyCount
        }

        class ThreadListPage {
            <<Read Model>>
            +IReadOnlyList~ThreadSummary~ Items
            +int Page
            +int PageSize
            +int TotalCount
            +bool HasNextPage
        }

        class ThreadQuery {
            <<Value Object>>
            +int Page
            +int PageSize
        }

        class IThreadRepository {
            +Task CreateAsync(thread: Thread, maxThreadCount: int)
            +Task~Thread?~ FindByIdAsync(threadId: ThreadId)
            +Task SaveAsync(thread: Thread, maxReplyCount: int)
            +Task~ThreadListPage~ GetPageAsync(query: ThreadQuery)
        }

        class ThreadService {
            <<Application Service>>
            +Task~ThreadListPage~ GetPageAsync(page: int)
            +Task~ThreadDetailView?~ GetByIdAsync(threadId: ThreadId)
            +Task~ThreadDetailView~ CreateAsync(authorPlayerId: PlayerId, title: string, body: string)
            +Task~ThreadDetailView~ AddReplyAsync(threadId: ThreadId, authorPlayerId: PlayerId, body: string)
            +Task~IReadOnlyList~ThreadAlertSummaryView~~ GetAlertSummariesAsync(authorPlayerId: PlayerId)
            +Task MarkRepliesAlertedAsync(replyIds: IEnumerable~ThreadReplyId~)
        }

        note for ThreadService "匿名ログイン中のユーザーはスレッド作成・返信不可。\nスレッド一覧/詳細の閲覧は継続して許可する。"
        note for ThreadService "通知の検知はホーム画面の初回取得時のみ行う。\n未通知のメッセージ/返信を検知したらトースト表示し、その直後に alert 済みに更新する。"
    }

    GlobalChatRoom *-- ChatMessage : 0..100
    GlobalChatRoom ..> IGlobalChatRoomRepository : stored_by
    IGlobalChatRoomRepository ..> GlobalChatRoom : stores/loads
    GlobalChatService ..> GlobalChatMessageView : builds
    GlobalChatService ..> GlobalChatRoomView : builds
    GlobalChatService ..> IGlobalChatRoomRepository : use
    ChatRoom *-- ChatMessage : 0..100
    ChatMessage *-- ChatText : has
    ChatMessage ..> ChatMessageSenderType : has
    IChatRoomRepository ..> ChatRoom : stores/loads
    ChatService ..> ChatMessageView : builds
    ChatService ..> ChatRoomView : builds
    ChatService ..> IChatRoomRepository : use
    Thread *-- ThreadReply : 0..100
    Thread *-- ThreadId : has
    Thread *-- ThreadTitle : has
    Thread *-- ThreadBody : has
    ThreadReply *-- ThreadReplyId : has
    ThreadReply *-- ThreadReplyBody : has
    IThreadRepository ..> Thread : stores/loads
    ThreadService ..> IThreadRepository : use
    ThreadService ..> ThreadDetailView : builds
    ThreadService ..> ThreadListPage : builds
    ThreadService ..> ThreadAlertSummaryView : builds
